fixed the cards on mobile version

--- a/pricing card css mini-project/styles.css
+++ b/pricing card css mini-project/styles.css
@@ -31,10 +31,6 @@ li {
   margin-bottom: 10px;
 }
 
-/* sub {
-  vertical-align: super;
-} */
-
 .cards-container {
   display: flex;
   justify-content: space-around;
@@ -43,9 +39,8 @@ li {
   gap: 30px;
   padding: 3rem;
   background-color: #f8fafe;
-  width: 80%;
   max-width: 1100px;
-  min-height: 70vh;
+  min-height: 60vh;
   border-radius: 10px;
 }
 
@@ -53,6 +48,8 @@ li {
 
 .card {
   flex: 1;
+  min-width: 250px;
+  height: 600px;
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
@@ -89,6 +86,7 @@ li {
 }
 
 /* Price */
+
 .card .price {
   font-size: 45px;
   font-weight: 700;
